--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,7 +3,7 @@
     font-size: 20px;
 }
 
-header {
+.main-home-header {
     height: 86vh;
     color: var(--white-color);
 }
@@ -36,7 +36,7 @@ img[alt='Signature'] {
     background-repeat: no-repeat;
     width: 100%;
     min-height: 86%;
-    position: absolute;
+    position: fixed;
     z-index: -2;
 }
 
@@ -79,12 +79,13 @@ img[alt='Signature'] {
 }
 
 a>img:hover,
-nav>ul>li>a:hover {
+.nav-li:hover {
     background-color: var(--curry-color);
     border-radius: 5px;
+    cursor: pointer;
 }
 
-li>a {
+.nav-li {
     padding: 3px;
 }
 
@@ -106,6 +107,7 @@ h1 {
 
 h2 {
     color: var(--tuscan-color);
+    font-weight: bold;
 }
 
 .upcoming-container {
@@ -125,6 +127,15 @@ h2 {
     width: 20%;
     align-items: center;
     justify-content: space-evenly;
+}
+
+li>div>p {
+    color: var(--tuscan-color);
+    font-weight: bold;
+}
+
+span {
+    font-weight: normal;
 }
 
 .upcoming-container>button,
@@ -194,10 +205,60 @@ iframe {
 
 .images-container {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 1000px;
+    height: 1800px;
+    padding-bottom: 2%;
+    gap: 1%;
+}
+
+.left-images-container {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    gap: 1%;
+}
+
+.right-images-container {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    gap: 1%;
+}
+
+.right-images-container>img {
+    width: 100%;
+    height: 32.7%;
+    object-fit: cover;
+}
+
+.left-images-container>img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.left-images-container .image-1 {
+    height: 66.6%;
+}
+
+.left-images-container .image-7 {
+    height: 32.8%;
+}
+
+.right-images-container {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .home-footer {
