--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -4,7 +4,7 @@
 }
 
 .about-home-header {
-    height: 75vh;
+    height: 85vh;
     color: var(--white-color);
 }
 
@@ -22,12 +22,11 @@ img[alt='Signature'] {
 }
 
 .about-background-image {
-    background-image: url(../../images/About/home-page-about.avif);
+    background-image: url(../../images/About/about-pozadina.avif);
     background-size: cover;
-    background-position: center 30%;
-    background-repeat: no-repeat;
+    background-position: center 5%;
     width: 100%;
-    min-height: 75%;
+    min-height: 85%;
     position: fixed;
     z-index: -2;
 }
@@ -57,7 +56,7 @@ a>img:hover,
     align-items: center;
     padding-right: 4%;
     gap: 5px;
-    margin-top: 30%;
+    margin-top: 35%;
 }
 
 h2 {
@@ -77,3 +76,205 @@ main>div.bio-container {
     width: 80%;
     padding-bottom: 3%;
 }
+
+.hihglists-h2 {
+    padding-bottom: 2%;
+}
+
+.project-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2%;
+    width: 100%;
+    height: 1800px;
+}
+
+.project-container>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-container>div>img,
+.project-container>div>p {
+    width: 100%;
+    height: 33.3%;
+}
+
+.project-container>div>img {
+    object-fit: cover;
+}
+
+.project-container>div>p {
+    text-align: center;
+}
+
+.project-item-left {
+    width: 100%;
+    padding-left: 4%;
+    height: 100%;
+}
+
+.project-item-right {
+    width: 100%;
+    padding-right: 4%;
+    height: 100%;
+}
+
+.project-h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2% 0;
+}
+
+.project-item-right p br {
+    display: block;
+    padding-bottom: 3%;
+    content: "";
+}
+
+div.project-container>div>p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.beginnings-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2%;
+}
+
+.beginnings-container>img {
+    width: 45%;
+}
+
+.beginnings-container>p {
+    text-indent: 0;
+    width: 92.2%;
+    padding: 2% 3% 2% 0%;
+}
+
+.beginnings-container2 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2%;
+    padding-bottom: 2%;
+}
+
+.beginnings-container2>img {
+    width: 45%;
+}
+
+.paragraphs-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7.2%;
+}
+
+.paragraphs-container>p {
+    width: 40%;
+    padding: 1% 0%;
+    text-align: justify;
+}
+
+.about-footer {
+    background-color: rgba(33, 49, 65, 255);
+    width: 100%;
+    height: 110px;
+}
+
+.about-footer>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 1.5%;
+}
+
+.about-footer>div>img {
+    padding-left: 2%;
+}
+
+.about-footer>p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--nickel-color);
+}
+
+.footer-icons {
+    display: flex;
+    align-items: center;
+    padding-right: 3%;
+    gap: 5px;
+}
+
+.slider {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.slider .slideTop,
+.slideBottom {
+    width: 70%;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 2s linear;
+}
+
+div.slideTop>img,
+div.slideBottom>img {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+}
+
+.content {
+    position: absolute;
+    z-index: 20;
+    bottom: 3%;
+    left: 2.5%;
+}
+
+.content>p {
+    color: var(--white-color);
+    width: 85%;
+}
+
+.buttons-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1%;
+    gap: 0.2%;
+}
+
+button.slider-buttons {
+    min-width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+
+/* button {
+    min-width: 290px;
+    height: 65px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--curry-color);
+    color: var(--white-color);
+}
+
+button:active {
+    border: 1px solid black;
+} */
