--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -62,6 +62,7 @@ a>img:hover,
 h2 {
     color: var(--tuscan-color);
     font-weight: bold;
+    font-size: 25px;
 }
 
 main>div.bio-container {
@@ -78,7 +79,7 @@ main>div.bio-container {
 }
 
 .hihglists-h2 {
-    padding-bottom: 2%;
+    padding-bottom: 1%;
 }
 
 .project-container {
@@ -88,6 +89,7 @@ main>div.bio-container {
     gap: 2%;
     width: 100%;
     height: 1800px;
+    padding-bottom: 2%;
 }
 
 .project-container>div {
@@ -172,6 +174,11 @@ div.project-container>div>p {
     width: 45%;
 }
 
+.beginnings-blue-background {
+    background-color: var(--midnight-color);
+    color: var(--white-color);
+}
+
 .paragraphs-container {
     display: flex;
     justify-content: center;
@@ -223,6 +230,7 @@ div.project-container>div>p {
     flex-direction: column;
     align-items: center;
     position: relative;
+    padding-top: 2%;
 }
 
 .slider .slideTop,
@@ -256,7 +264,7 @@ div.slideBottom>img {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 1%;
+    padding-top: 3%;
     gap: 0.2%;
 }
 
@@ -264,6 +272,7 @@ button.slider-buttons {
     min-width: 15px;
     height: 15px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 /* button {
