--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/best-signature-font');
-
 * {
     font-family: var(--ff-primary);
     font-size: 20px;
@@ -48,7 +46,7 @@ img[alt='Signature'] {
     align-items: center;
     padding-right: 4%;
     gap: 5px;
-    margin-top: 16.5%;
+    margin-top: 14%;
 }
 
 a>img:hover,
@@ -69,7 +67,22 @@ a>img:hover,
     color: var(--white-color);
     width: 40%;
     padding-top: 13.5%;
-    margin-left: 18%;
+    margin-left: 5%;
+    animation-name: slideFromLeft;
+    animation-duration: 3s;
+    animation-delay: 0.1s;
+    animation-fill-mode: forwards;
+    transform: translateX(-150%);
+}
+
+@keyframes slideFromLeft {
+    0% {
+        transform: translateX(-150%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
 
 .quote-contact>p>em,
@@ -78,7 +91,7 @@ a>img:hover,
 }
 
 .quote-contact>footer>p>i {
-    font-family: 'Best Signature Font', sans-serif;
+    font-family: 'Writing Signature', sans-serif;
 }
 
 .quote-contact>footer {
@@ -105,27 +118,17 @@ h2 {
 
 .contact-container {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     gap: 2%;
+    height: 65vh;
 }
 
 .contact-item {
     border: 1px solid black;
-    min-height: 70px;
-}
-
-.left-contact {
-    display: flex;
-    flex-direction: column;
+    min-height: 10%;
     width: 40%;
-    gap: 15px;
-}
-
-.right-contact {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    gap: 15px;
 }
 
 input,
@@ -137,12 +140,12 @@ textarea {
     padding-top: 1%;
 }
 
-.right-contact div.contact-item {
+.contact-item:nth-child(6) {
     height: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     border: none;
 }
 
@@ -188,4 +191,244 @@ div.contact-item span {
     align-items: center;
     padding-right: 3%;
     gap: 5px;
+}
+
+button.button-nav-mobile,
+.footer-slide,
+.icons-mobile,
+button.nav-toggle {
+    display: none;
+}
+
+.line {
+    display: block;
+    width: 50%;
+    height: 2px;
+    background-color: var(--white-color);
+    margin-bottom: 7px;
+}
+
+@media only screen and (max-width: 480px) {
+
+    .contact-icons {
+        display: none;
+        position: absolute;
+    }
+
+    .contact-navigation {
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        /* Initially hide the menu off-screen */
+        min-width: 80%;
+        min-height: 100%;
+        background-color: var(--midnight-color);
+        transition: right 0.4s ease;
+        z-index: 20;
+        padding-right: 0;
+    }
+
+    .contact-navigation.active {
+        display: flex;
+        right: 0;
+        z-index: 20;
+        min-width: 80%;
+        min-height: 100%;
+        position: fixed;
+
+        .line {
+            width: 100%;
+        }
+    }
+
+    .footer-slide {
+        display: block;
+        left: -100%;
+        transition: left 0.4s ease;
+        z-index: 22;
+        position: absolute;
+        top: 91%;
+        font-size: 15px;
+    }
+
+    .footer-slide.active {
+        left: 43%;
+        transition: left 0.4s ease;
+        z-index: 22;
+        position: fixed;
+    }
+
+    div.contact-header>.signature-mob-slide {
+        display: block;
+        position: absolute;
+        top: 3%;
+        left: -100%;
+        transition: left 0.4s ease;
+        z-index: 21;
+    }
+
+    div.contact-header>.signature-mob-slide.active {
+        display: block;
+        transition: left 0.4s ease;
+        left: 28%;
+        z-index: 21;
+        position: fixed;
+    }
+
+    .icons-mobile.active {
+        left: 50%;
+        transition: left 0.4s ease;
+        position: fixed;
+    }
+
+    button.nav-toggle {
+        display: block;
+        min-width: 25px;
+        height: 25px;
+        background-color: transparent;
+        position: absolute;
+        top: 3%;
+        right: 0;
+        left: 90%;
+        /* Show the menu toggle button */
+    }
+
+    .nav-li {
+        padding: 10px;
+        margin-bottom: 15%;
+    }
+
+    .mobile-li {
+        margin-top: 35%;
+        padding-right: 50%;
+    }
+
+    button.button-nav-mobile {
+        display: block;
+        min-width: 25px;
+        height: 25px;
+        background-color: transparent;
+        margin-top: 5%;
+        margin-left: 85%;
+    }
+
+    .icons-mobile {
+        display: flex !important;
+        align-items: center;
+        position: absolute;
+        top: 85%;
+        padding: 0;
+        z-index: 20;
+        gap: 30%;
+        left: -100%;
+        transition: left 0.4s ease;
+    }
+
+    .contact-home-header {
+        height: 40vh;
+        color: var(--white-color);
+    }
+
+    .contact-header {
+        padding: 0;
+        height: 2%;
+    }
+
+    .contact-background-image {
+        background-repeat: no-repeat;
+        width: 100%;
+        min-height: 100%;
+        position: relative;
+    }
+
+    .quote-contact {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        color: var(--white-color);
+        width: 70%;
+        padding-top: 0%;
+        margin-left: 4%;
+        position: absolute;
+        top: 26%;
+    }
+
+    .quote-contact>p>em,
+    .quote-contact>footer>p>i {
+        font-size: 15px;
+    }
+
+    .quote-contact>footer {
+        align-self: flex-end;
+        margin-top: 1.5%;
+    }
+
+    .h2-contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5% 0 4% 0;
+    }
+
+    .contact-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 0%;
+        height: auto;
+    }
+
+    .contact-item {
+        border: 1px solid black;
+        min-height: 60px;
+        width: 90%;
+        margin-bottom: 3%;
+    }
+
+    input,
+    textarea {
+        padding-left: 1%;
+    }
+
+    textarea {
+        padding-top: 1%;
+    }
+
+    .contact-item:nth-child(6) {
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: none;
+    }
+
+    div.contact-item span {
+        font-size: 16px;
+        padding-bottom: 3%;
+    }
+
+    .pdf-a {
+        color: var(--black-color);
+        font-size: 16px;
+        font-weight: bold;
+        padding-bottom: 8%;
+        text-decoration: underline;
+    }
+
+    .contact-footer>p {
+        font-size: 13px;
+    }
+
+    .contact-footer>div>img {
+        padding-left: 0;
+    }
+
+    .contact-footer>div {
+        padding-top: 8%;
+        padding-right: 5%;
+        padding-bottom: 3%;
+    }
 }
