--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -31,7 +31,7 @@ img[alt='Signature'] {
     z-index: -2;
 }
 
-.navigation {
+.gallery-navigation {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -50,7 +50,7 @@ a>img:hover,
     padding: 3px;
 }
 
-.about-icons {
+.gallery-icons {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -104,12 +104,20 @@ a>img:hover,
     width: 860px;
     height: 571px;
     object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.images-1>img:hover,
+.images-2>img:hover,
+.big-image>img:hover {
+    transform: scale(1.03);
 }
 
 .images-2>img {
     width: 45%;
     height: 571px;
     object-fit: cover;
+    transition: transform 0.3s ease;
 }
 
 .images-1-p {
@@ -148,12 +156,14 @@ a>img:hover,
     height: 90vh;
     object-fit: cover;
     object-position: center 10%;
+    transition: transform 0.3s ease;
 }
 
 .big-image>p {
     position: absolute;
     color: var(--white-color);
-    padding: 38% 58% 0 0;
+    margin: 38% 58% 0 0;
+    z-index: 30;
 }
 
 div.big-image2>p {
@@ -199,4 +209,296 @@ div.big-image2>p {
     align-items: center;
     padding-right: 3%;
     gap: 5px;
+}
+
+button.button-nav-mobile,
+.footer-slide,
+.icons-mobile,
+button.nav-toggle {
+    display: none;
+}
+
+.line {
+    display: block;
+    width: 50%;
+    height: 2px;
+    background-color: var(--white-color);
+    margin-bottom: 7px;
+}
+
+@media only screen and (max-width: 480px) {
+
+    .images-1>img:hover,
+    .images-2>img:hover,
+    .big-image>img:hover {
+        transform: none;
+    }
+
+    .p-main-background {
+        display: flex;
+        padding-top: 0%;
+        padding-left: 3%;
+        width: 100%;
+        color: var(--white-color);
+        top: 32%;
+        position: absolute;
+    }
+
+    .p-main-background>p {
+        font-size: 15px;
+    }
+
+    .gallery-icons {
+        display: none;
+        position: absolute;
+    }
+
+    .gallery-navigation {
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        /* Initially hide the menu off-screen */
+        min-width: 80%;
+        min-height: 100%;
+        background-color: var(--midnight-color);
+        transition: right 0.4s ease;
+        z-index: 20;
+        padding-right: 0;
+    }
+
+    .gallery-navigation.active {
+        display: flex;
+        right: 0;
+        z-index: 20;
+        min-width: 80%;
+        min-height: 100%;
+        position: fixed;
+
+        .line {
+            width: 100%;
+        }
+    }
+
+    .footer-slide {
+        display: block;
+        left: -100%;
+        transition: left 0.4s ease;
+        z-index: 22;
+        position: absolute;
+        top: 91%;
+        font-size: 15px;
+    }
+
+    .footer-slide.active {
+        left: 43%;
+        transition: left 0.4s ease;
+        z-index: 22;
+        position: fixed;
+    }
+
+    div.home-header>.signature-mob-slide {
+        display: block;
+        position: absolute;
+        top: 3%;
+        left: -100%;
+        transition: left 0.4s ease;
+        z-index: 21;
+    }
+
+    div.home-header>.signature-mob-slide.active {
+        display: block;
+        transition: left 0.4s ease;
+        left: 28%;
+        z-index: 21;
+        position: fixed;
+    }
+
+    .icons-mobile.active {
+        left: 50%;
+        transition: left 0.4s ease;
+        position: fixed;
+    }
+
+    button.nav-toggle {
+        display: block;
+        min-width: 25px;
+        height: 25px;
+        background-color: transparent;
+        position: absolute;
+        top: 3%;
+        right: 0;
+        left: 90%;
+        /* Show the menu toggle button */
+    }
+
+    .nav-li {
+        padding: 10px;
+        margin-bottom: 15%;
+    }
+
+    .mobile-li {
+        margin-top: 35%;
+        padding-right: 50%;
+    }
+
+    button.button-nav-mobile {
+        display: block;
+        min-width: 25px;
+        height: 25px;
+        background-color: transparent;
+        margin-top: 5%;
+        margin-left: 85%;
+    }
+
+    .icons-mobile {
+        display: flex !important;
+        align-items: center;
+        position: absolute;
+        top: 85%;
+        padding: 0;
+        z-index: 20;
+        gap: 30%;
+        left: -100%;
+        transition: left 0.4s ease;
+    }
+
+    .gallery-home-header {
+        height: 40vh;
+        color: var(--white-color);
+    }
+
+    .home-header {
+        padding: 0;
+        height: 2%;
+    }
+
+    .gallery-background-image {
+        background-repeat: no-repeat;
+        width: 100%;
+        min-height: 100%;
+        position: relative;
+    }
+
+    .wrapper1 {
+        overflow: hidden;
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
+
+    .images-1 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1%;
+        flex-wrap: nowrap;
+        padding-left: 4.5%;
+        overflow: hidden;
+        max-width: 100%;
+    }
+
+    .images-2 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1%;
+        flex-wrap: nowrap;
+        padding-left: 4.5%;
+        overflow: hidden;
+        max-width: 100%;
+    }
+
+    .images-1>img {
+        width: 95%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .images-2>img {
+        width: 90%;
+        height: 269px;
+        object-fit: cover;
+    }
+
+    .images-1-p {
+        display: flex;
+        align-items: center;
+        padding: 1% 0 1% 4.5%;
+    }
+
+    .p-1 {
+        color: var(--midnight-color);
+        font-weight: bold;
+        width: 90%;
+        padding-bottom: 1%;
+        font-size: 15px;
+    }
+
+    .color-container {
+        padding-top: 2%;
+        background-color: var(--midnight-color);
+    }
+
+    .p-2 {
+        color: var(--white-color);
+        width: 80%;
+        padding-bottom: 1%;
+        font-size: 15px;
+    }
+
+    .big-image {
+        max-width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .big-image>img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center 10%;
+    }
+
+    .big-image>p {
+        position: absolute;
+        color: var(--white-color);
+        margin: 50% 0 0 50%;
+        font-size: 15px;
+    }
+
+    div.big-image2>p {
+        position: absolute;
+        color: var(--white-color);
+        padding-top: 5%;
+        padding-left: 5%;
+        font-size: 15px;
+        width: 90%;
+    }
+
+    .big-image2>img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center 82%;
+    }
+
+
+    .gallery-h2 {
+        padding-top: 5%;
+    }
+
+    .gallery-footer>p {
+        font-size: 13px;
+    }
+
+    .gallery-footer>div>img {
+        padding-left: 0;
+    }
+
+    .gallery-footer>div {
+        padding-top: 8%;
+        padding-right: 5%;
+        padding-bottom: 3%;
+    }
 }
