--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -661,6 +661,7 @@ button.nav-toggle,
         font-size: 13px;
     }
 
+    .schedule-button>a,
     .schedule-button {
         font-size: 10px;
         padding: 1%;
@@ -688,6 +689,7 @@ button.nav-toggle,
         font-size: 10px;
     }
 
+    .schedule-button>a,
     .schedule-button {
         font-size: 8px;
         padding: 1%;
