--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -12,6 +12,18 @@
     position: relative;
     left: 30px;
     top: 5px;
+    font-family: "Great Vibes", cursive;
+    font-size: 33px;
+    color: var(--white-color);
+}
+
+.signature-mob-footer {
+    position: relative;
+    left: 4%;
+    top: 5px;
+    font-family: "Great Vibes", cursive;
+    font-size: 33px;
+    color: var(--white-color);
 }
 
 .home-header {
@@ -39,11 +51,15 @@
     list-style: none;
 }
 
-a>img:hover,
+.about-icons>a:hover,
 .nav-li:hover {
     background-color: var(--curry-color);
     border-radius: 5px;
     cursor: pointer;
+}
+
+.about-icons>a {
+    padding: 0.4%;
 }
 
 .nav-li {
@@ -54,9 +70,10 @@ a>img:hover,
     display: flex;
     justify-content: end;
     align-items: center;
-    padding-right: 4%;
-    gap: 5px;
-    margin-top: 35%;
+    padding-right: 3%;
+    gap: 20px;
+    margin-top: 34.5%;
+    font-size: 25px;
 }
 
 h2 {
@@ -118,7 +135,6 @@ main>div.bio-container {
     padding: 0 3%;
 }
 
-
 .project-h2 {
     display: flex;
     align-items: center;
@@ -137,7 +153,7 @@ div.beginnings-blue-background>h2.project-h2 {
 }
 
 div.project-container>div>p {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     justify-content: center;
 }
@@ -243,8 +259,17 @@ div.project-container>div>p {
 .footer-icons {
     display: flex;
     align-items: center;
-    padding-right: 3%;
-    gap: 5px;
+    padding-right: 8%;
+    gap: 45%;
+    font-size: 25px;
+}
+
+.footer-icons>a:hover {
+    background-color: var(--curry-color);
+}
+
+.footer-icons>a{
+    padding: 8%;
 }
 
 .slider {
@@ -318,6 +343,10 @@ button.nav-toggle {
 
 @media only screen and (max-width: 480px) {
 
+    b {
+        font-size: 15px;
+    }
+
     .about-icons {
         display: none;
     }
@@ -373,6 +402,7 @@ button.nav-toggle {
         left: -100%;
         transition: left 0.4s ease;
         z-index: 21;
+        font-size: 25px;
     }
 
     div.home-header>.signature-mob-slide.active {
@@ -454,7 +484,7 @@ button.nav-toggle {
         width: 90%;
         padding-top: 2%;
         padding-bottom: 2%;
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .hihglists-h2 {
@@ -506,7 +536,7 @@ button.nav-toggle {
     .content>p {
         color: var(--black-color);
         width: 90%;
-        font-size: 18px;
+        font-size: 15px;
     }
 
     .buttons-container {
@@ -619,6 +649,7 @@ button.nav-toggle {
         text-indent: 0;
         width: 92.2%;
         padding: 2% 3% 2% 0%;
+        font-size: 15px;
     }
 
     .beginnings-container2>img {
@@ -656,6 +687,31 @@ button.nav-toggle {
         padding-right: 5%;
         padding-bottom: 3%;
     }
+
+    .signature-mob-slide {
+        font-size: 23px;
+    }
+
+    .footer-icons {
+        display: flex;
+        align-items: center;
+        padding-right: 10%;
+        gap: 13%;
+        font-size: 25px;
+    }
+
+    .footer-icons>a {
+        padding: 8%;
+    }
+
+    .signature-mob-footer {
+        position: relative;
+        left: 30px;
+        top: 5px;
+        font-family: "Great Vibes", cursive;
+        font-size: 23px;
+        color: var(--white-color);
+    }
 }
 
 @media only screen and (max-width: 450px) {
@@ -666,6 +722,6 @@ button.nav-toggle {
     .project-container>div>p {
         width: 90%;
         height: 36%;
-        font-size: 18px;
+        font-size: 15px;
     }
 }
