--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Whisper&display=swap');
+
 * {
     font-family: var(--ff-primary);
     font-size: 20px;
@@ -8,10 +10,13 @@
     color: var(--white-color);
 }
 
-img[alt='Signature'] {
+.signature-mob-slide {
     position: relative;
     left: 30px;
     top: 5px;
+    font-family: "Great Vibes", cursive;
+    font-size: 33px;
+    color: var(--white-color);
 }
 
 .contact-header {
@@ -22,7 +27,7 @@ img[alt='Signature'] {
 }
 
 .contact-background-image {
-    background-image: url(../../images/contact/contact-background.avif);
+    background-image: url(../../images/contact/contact-background2.avif);
     background-size: cover;
     background-position: center 30%;
     background-repeat: no-repeat;
@@ -40,24 +45,29 @@ img[alt='Signature'] {
     list-style: none;
 }
 
-.contact-icons {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    padding-right: 4%;
-    gap: 5px;
-    margin-top: 14%;
-}
-
-a>img:hover,
+.contact-icons>a:hover,
 .nav-li:hover {
     background-color: var(--curry-color);
     border-radius: 5px;
     cursor: pointer;
 }
 
+.contact-icons>a {
+    padding: 0.4%;
+}
+
 .nav-li {
     padding: 3px;
+}
+
+.contact-icons {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 3%;
+    gap: 20px;
+    margin-top: 19.5%;
+    font-size: 25px;
 }
 
 .quote-contact {
@@ -66,18 +76,34 @@ a>img:hover,
     text-align: center;
     color: var(--white-color);
     width: 40%;
-    padding-top: 13.5%;
-    margin-left: 5%;
+    padding-top: 8%;
+    margin-left: 48%;
     animation-name: slideFromLeft;
     animation-duration: 3s;
-    animation-delay: 0.1s;
+    animation-delay: 0s;
     animation-fill-mode: forwards;
     transform: translateX(-150%);
 }
 
+.footer-icons {
+    display: flex;
+    align-items: center;
+    padding-right: 8%;
+    gap: 45%;
+    font-size: 25px;
+}
+
+.footer-icons>a:hover {
+    background-color: var(--curry-color);
+}
+
+.footer-icons>a {
+    padding: 8%;
+}
+
 @keyframes slideFromLeft {
     0% {
-        transform: translateX(-150%);
+        transform: translateX(-250%);
     }
 
     100% {
@@ -91,7 +117,8 @@ a>img:hover,
 }
 
 .quote-contact>footer>p>i {
-    font-family: 'Writing Signature', sans-serif;
+    font-family: 'Whisper', sans-serif;
+    font-size: 50px;
 }
 
 .quote-contact>footer {
@@ -186,11 +213,13 @@ div.contact-item span {
     color: var(--nickel-color);
 }
 
-.contact-footer-icons {
-    display: flex;
-    align-items: center;
-    padding-right: 3%;
-    gap: 5px;
+.signature-mob-footer {
+    position: relative;
+    left: 4%;
+    top: 5px;
+    font-family: "Great Vibes", cursive;
+    font-size: 33px;
+    color: var(--white-color);
 }
 
 button.button-nav-mobile,
@@ -266,6 +295,7 @@ button.nav-toggle {
         left: -100%;
         transition: left 0.4s ease;
         z-index: 21;
+        font-size: 25px;
     }
 
     div.contact-header>.signature-mob-slide.active {
@@ -347,16 +377,19 @@ button.nav-toggle {
         flex-direction: column;
         text-align: center;
         color: var(--white-color);
-        width: 70%;
+        width: 60%;
         padding-top: 0%;
-        margin-left: 4%;
+        margin-left: 35%;
         position: absolute;
-        top: 26%;
+        top: 10%;
     }
 
-    .quote-contact>p>em,
-    .quote-contact>footer>p>i {
+    .quote-contact>p>em {
         font-size: 15px;
+    }
+
+    .quote-contact>footer>p>i {
+        font-size: 20px;
     }
 
     .quote-contact>footer {
@@ -430,5 +463,45 @@ button.nav-toggle {
         padding-top: 8%;
         padding-right: 5%;
         padding-bottom: 3%;
+    }
+
+    .signature-mob-slide {
+        font-size: 23px;
+    }
+
+    .footer-icons {
+        display: flex;
+        align-items: center;
+        padding-right: 10%;
+        gap: 13%;
+        font-size: 25px;
+    }
+
+    .footer-icons>a {
+        padding: 8%;
+    }
+
+    .signature-mob-footer {
+        position: relative;
+        left: 30px;
+        top: 5px;
+        font-family: "Great Vibes", cursive;
+        font-size: 23px;
+        color: var(--white-color);
+    }
+}
+
+@media only screen and (max-width: 361px) {
+
+    .quote-contact {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        color: var(--white-color);
+        width: 60%;
+        padding-top: 0%;
+        margin-left: 35%;
+        position: absolute;
+        top: 10%;
     }
 }
