--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 :root {
   --black-color: rgba(0, 0, 0, 1);
   --white-color: rgba(255, 255, 255, 1);
