- add email functionality - update agenda history - swap button and CV

--- a/src/components/Agenda/schedules/PastTwentyFour.module.css
+++ b/src/components/Agenda/schedules/PastTwentyFour.module.css
@@ -23,6 +23,10 @@ span {
     font-weight: normal;
 }
 
+/* .list-element:nth-of-type(10) .date-and-place {
+    margin-left: 3%;
+} */
+
 .schedule-button {
     min-width: 5%;
     height: 100%;
@@ -33,6 +37,66 @@ span {
     cursor: pointer;
 }
 
+.schedule-button>a:hover,
 .schedule-button:hover {
     color: var(--black-color);
 }
+
+@media only screen and (max-width: 480px) {
+
+    .list-element {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 25px 0;
+        text-align: center;
+        justify-content: space-between;
+        margin-right: 0%;
+        gap: 20px;
+    }
+
+    .list-element>p,
+    span {
+        font-size: 16px;
+    }
+
+    .date-and-place>p {
+        font-size: 20px;
+    }
+
+    .date-and-place {
+        display: flex;
+        align-items: center;
+        margin-left: 0%;
+    }
+
+    .schedule-button,
+    .schedule-button>a {
+        font-size: 16px;
+        padding: 1%;
+    }
+}
+
+/* @media only screen and (max-width: 400px) {
+
+    .list-element>p,
+    .date-and-place>p,
+    span {
+        font-size: 10px;
+    }
+
+    .schedule-button>a,
+    .schedule-button {
+        font-size: 8px;
+        padding: 1%;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+
+    .list-element>p,
+    .date-and-place>p,
+    span {
+        font-size: 9px;
+    }
+} */
