--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -178,12 +178,12 @@ textarea {
 
 div.contact-item span {
     font-size: 16px;
-    padding-bottom: 3%;
+    padding-top: 10%;
 }
 
 .pdf-a {
     color: var(--black-color);
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     padding-bottom: 8%;
     text-decoration: underline;
@@ -440,12 +440,11 @@ button.nav-toggle {
 
     div.contact-item span {
         font-size: 16px;
-        padding-bottom: 3%;
     }
 
     .pdf-a {
         color: var(--black-color);
-        font-size: 16px;
+        font-size: 20px;
         font-weight: bold;
         padding-bottom: 8%;
         text-decoration: underline;
